Fixed testHardBrick